Fix logged in consistency
User was able to see too much information without being logged in as well as being able to edit some data (like delete the task) also without being logged in. I am amending this by adding decorators and removing buttons for users that are not logged in.

--- a/tracker/static-dev/css/tracker.css
+++ b/tracker/static-dev/css/tracker.css
@@ -7060,6 +7060,12 @@ th.hide-for-touch {
     background-size: 52px 37px !important;
     background-repeat: no-repeat !important; } }
 
+.pull-right {
+  float: right; }
+
+.text-center {
+  text-align: center; }
+
 .row.row--full-width {
   max-width: 100%; }
   .row.row--full-width > div:first-child, .row.row--full-width > div:last-child {
