--- a/tracker/static-dev/scss/_main.scss
+++ b/tracker/static-dev/scss/_main.scss
@@ -1,3 +1,11 @@
+.pull-right{
+	float: right;
+}
+
+.text-center{
+	text-align: center;
+}
+
 .row {
 	&.row--full-width {
 		max-width: 100%;
